fix alignment for logo

--- a/reactDashboard/src/components/DashboardNavbar/DashboardNavbar.css
+++ b/reactDashboard/src/components/DashboardNavbar/DashboardNavbar.css
@@ -83,7 +83,7 @@
 
 .dashboard-navbar img#logo {
   height: 60px;
-  margin: 10px 10px 0 0;
+  margin: 10px 10px 10px 0;
   padding: 0;
 }
 
